[package]
name = "mysite"
version = "0.1.0"
edition = "2018"


[lib]
path= "src/lib.rs"


[[bin]]
path= "src/main.rs"
name = "mysite"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = { version = "1", features = ["derive"]}
config = "0.11.0"
